# spotify-tools

./: .coverage  .gitignore  2025-09-15_groove-dj-charts.txt  CLAUDE.md  README.md  check_albums_cache.sh  pyproject.toml  setup.py  website-scraping-prompt.md
.github/: autofix.yml  lint.yml
.github/workflows/: adopt-ruff.yaml  autofix.yml  lint.yml
random_album/: cli.py  config.py
spotify_tools/: cli.py  config.py
src/spotify_tools/: __init__.py  __main__.py  album.py  cache.py  cli.py  cli_utils.py  config.py  database.py  perf.py  playlist.py  spotify.py  types.py
src/spotify_tools/commands/: __init__.py  configure.py  create_playlist.py  list_albums.py  random_album.py  rebuild_history.py  refresh_cache.py  stats.py  sync_history.py
tests/: conftest.py  test_album.py  test_cli_configure.py  test_cli_create_playlist.py  test_cli_list_albums.py  test_cli_random_album.py  test_cli_rebuild_history.py  test_cli_refresh_cache.py  test_cli_stats.py  test_cli_sync_history.py  test_cli_utils.py  test_config.py  test_database.py  test_perf.py  test_playlist.py  test_spotify.py
