[project]
name = "spotify-tools"
version = "0.5"
description = "Various tools working with Spotify"
readme = "README.md"
authors = [{name = "Kai Weber"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "click",
    "spotipy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
spt = "spotify_tools.cli:cli"

[project.urls]
Homepage = "https://github.com/kwbr/spotify-tools"
Changelog = "https://github.com/kwbr/spotify-tools/releases"
Issues = "https://github.com/kwbr/spotify-tools/issues"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "ANN",
    "D",
]

[dependency-groups]
test = [
    "pytest"
]
lint = [
    "mypy",
    "ruff"
]
