[project]
name = "spotify-tools"
version = "0.6"
description = "Various tools working with Spotify"
readme = "README.md"
authors = [{name = "Kai Weber"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "spotipy>=2.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
spt = "spotify_tools.cli:cli"

[project.urls]
Homepage = "https://github.com/kwbr/spotify-tools"
Changelog = "https://github.com/kwbr/spotify-tools/releases"
Issues = "https://github.com/kwbr/spotify-tools/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
