[project]
name = "spotify-tools"
version = "0.8"
description = "Various tools working with Spotify"
readme = "README.md"
authors = [{name = "Kai Weber"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "spotipy>=2.25.0",
]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project.scripts]
spt = "spotify_tools.cli:cli"

[project.urls]
Homepage = "https://github.com/kwbr/spotify-tools"
Changelog = "https://github.com/kwbr/spotify-tools/releases"
Issues = "https://github.com/kwbr/spotify-tools/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]
